src/objects/Business_Entity__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Entity Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Head_Name__c</fullName>
        <label>Head Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UDF__c</fullName>
        <label>UDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Business Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Department_Head__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Entities</pluralLabel>
    <recordTypes>
        <fullName>Department</fullName>
        <active>true</active>
        <label>Department</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>